--- a/module-1/Numpy/your-code/main.ipynb
+++ b/module-1/Numpy/your-code/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,24 +28,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'Print' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-718cd2e9435b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mPrint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mNumpy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'Print' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.18.1\n"
      ]
     }
    ],
    "source": [
-    "# your code here\n",
-    "Print(Numpy)"
+    "print(np.__version__)"
    ]
   },
   {
@@ -58,20 +53,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0.08639216 0.14994641 0.25333583 0.30481673 0.28851558]\n",
-      "  [0.24726271 0.86527519 0.19673267 0.68732616 0.34692976]\n",
-      "  [0.30463244 0.93057679 0.12604749 0.41342702 0.14470182]]\n",
+      "[[[0.71989595 0.73803405 0.90993227 0.10592884 0.46857519]\n",
+      "  [0.27757189 0.20076459 0.25995467 0.56430451 0.92100504]\n",
+      "  [0.91418395 0.61447732 0.82257942 0.35622363 0.17242895]]\n",
       "\n",
-      " [[0.16178458 0.52602654 0.50854505 0.0807047  0.29699063]\n",
-      "  [0.39723305 0.69824029 0.35982204 0.93213748 0.75934602]\n",
-      "  [0.1043032  0.51699651 0.33682344 0.34572235 0.70329057]]]\n"
+      " [[0.02405377 0.48309757 0.67418038 0.57787161 0.53184059]\n",
+      "  [0.52447741 0.69995403 0.56697107 0.61836365 0.52547563]\n",
+      "  [0.67672291 0.75377983 0.27761564 0.5883783  0.24825557]]]\n"
      ]
     }
    ],
@@ -83,20 +78,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.59819529 0.76148441 0.42722831 0.40834002 0.88045934]\n",
+      "  [0.10309774 0.32962232 0.95818893 0.2688292  0.04226258]\n",
+      "  [0.04561535 0.04974134 0.08696339 0.11966654 0.11459325]]\n",
+      "\n",
+      " [[0.77586574 0.9730865  0.99318257 0.19301275 0.28229872]\n",
+      "  [0.00920006 0.35753983 0.79842618 0.37467182 0.36246624]\n",
+      "  [0.8098754  0.19861949 0.79205346 0.250563   0.42077379]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Method 2"
+    "# Method 2\n",
+    "\n",
+    "a=np.random.rand(2,3,5)\n",
+    "print(a)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.59819529 0.76148441 0.42722831 0.40834002 0.88045934]\n",
+      "  [0.10309774 0.32962232 0.95818893 0.2688292  0.04226258]\n",
+      "  [0.04561535 0.04974134 0.08696339 0.11966654 0.11459325]]\n",
+      "\n",
+      " [[0.77586574 0.9730865  0.99318257 0.19301275 0.28229872]\n",
+      "  [0.00920006 0.35753983 0.79842618 0.37467182 0.36246624]\n",
+      "  [0.8098754  0.19861949 0.79205346 0.250563   0.42077379]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Method 3"
+    "# Method 3\n",
+    "\n",
+    "a=np.empty((2,3,5))\n",
+    "print(a)"
    ]
   },
   {
@@ -108,20 +138,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0.08639216 0.14994641 0.25333583 0.30481673 0.28851558]\n",
-      "  [0.24726271 0.86527519 0.19673267 0.68732616 0.34692976]\n",
-      "  [0.30463244 0.93057679 0.12604749 0.41342702 0.14470182]]\n",
+      "[[[0.59819529 0.76148441 0.42722831 0.40834002 0.88045934]\n",
+      "  [0.10309774 0.32962232 0.95818893 0.2688292  0.04226258]\n",
+      "  [0.04561535 0.04974134 0.08696339 0.11966654 0.11459325]]\n",
       "\n",
-      " [[0.16178458 0.52602654 0.50854505 0.0807047  0.29699063]\n",
-      "  [0.39723305 0.69824029 0.35982204 0.93213748 0.75934602]\n",
-      "  [0.1043032  0.51699651 0.33682344 0.34572235 0.70329057]]]\n"
+      " [[0.77586574 0.9730865  0.99318257 0.19301275 0.28229872]\n",
+      "  [0.00920006 0.35753983 0.79842618 0.37467182 0.36246624]\n",
+      "  [0.8098754  0.19861949 0.79205346 0.250563   0.42077379]]]\n"
      ]
     }
    ],
@@ -131,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,11 +170,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "b=np.ones((5,2,3),dtype = int)"
+    "b=np.ones((5,2,3),dtype = float)"
    ]
   },
   {
@@ -156,27 +186,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[1 1 1]\n",
-      "  [1 1 1]]\n",
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
       "\n",
-      " [[1 1 1]\n",
-      "  [1 1 1]]\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
       "\n",
-      " [[1 1 1]\n",
-      "  [1 1 1]]\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
       "\n",
-      " [[1 1 1]\n",
-      "  [1 1 1]]\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
       "\n",
-      " [[1 1 1]\n",
-      "  [1 1 1]]]\n"
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
      ]
     }
    ],
@@ -193,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,20 +265,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[1 1 1 1 1]\n",
-      "  [1 1 1 1 1]\n",
-      "  [1 1 1 1 1]]\n",
+      "[[[1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]]\n",
       "\n",
-      " [[1 1 1 1 1]\n",
-      "  [1 1 1 1 1]\n",
-      "  [1 1 1 1 1]]]\n"
+      " [[1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]]]\n"
      ]
     }
    ],
@@ -270,26 +300,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[1.08639216 1.14994641 1.25333583 1.30481673 1.28851558]\n",
-      "  [1.24726271 1.86527519 1.19673267 1.68732616 1.34692976]\n",
-      "  [1.30463244 1.93057679 1.12604749 1.41342702 1.14470182]]\n",
+      "[[[1.59819529 1.76148441 1.42722831 1.40834002 1.88045934]\n",
+      "  [1.10309774 1.32962232 1.95818893 1.2688292  1.04226258]\n",
+      "  [1.04561535 1.04974134 1.08696339 1.11966654 1.11459325]]\n",
       "\n",
-      " [[1.16178458 1.52602654 1.50854505 1.0807047  1.29699063]\n",
-      "  [1.39723305 1.69824029 1.35982204 1.93213748 1.75934602]\n",
-      "  [1.1043032  1.51699651 1.33682344 1.34572235 1.70329057]]]\n"
+      " [[1.77586574 1.9730865  1.99318257 1.19301275 1.28229872]\n",
+      "  [1.00920006 1.35753983 1.79842618 1.37467182 1.36246624]\n",
+      "  [1.8098754  1.19861949 1.79205346 1.250563   1.42077379]]]\n"
      ]
     }
    ],
    "source": [
     "# a's shape=(2,3,5)\n",
-    "# b's shape=(5,2,3) --> reshape (2,3,5)\n",
+    "# b's shape=(5,2,3) --> reshape (2,3,5)=c\n",
+    "# a and c have the same shape, thus they can add up to d\n",
     "\n",
     "\n",
     "d=np.add(a,c)\n",
@@ -305,33 +336,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0.08639216 0.14994641 0.25333583 0.30481673 0.28851558]\n",
-      "  [0.24726271 0.86527519 0.19673267 0.68732616 0.34692976]\n",
-      "  [0.30463244 0.93057679 0.12604749 0.41342702 0.14470182]]\n",
+      "[[[0.59819529 0.76148441 0.42722831 0.40834002 0.88045934]\n",
+      "  [0.10309774 0.32962232 0.95818893 0.2688292  0.04226258]\n",
+      "  [0.04561535 0.04974134 0.08696339 0.11966654 0.11459325]]\n",
       "\n",
-      " [[0.16178458 0.52602654 0.50854505 0.0807047  0.29699063]\n",
-      "  [0.39723305 0.69824029 0.35982204 0.93213748 0.75934602]\n",
-      "  [0.1043032  0.51699651 0.33682344 0.34572235 0.70329057]]]\n",
+      " [[0.77586574 0.9730865  0.99318257 0.19301275 0.28229872]\n",
+      "  [0.00920006 0.35753983 0.79842618 0.37467182 0.36246624]\n",
+      "  [0.8098754  0.19861949 0.79205346 0.250563   0.42077379]]]\n",
       "--------------------------------------------------------------------------------\n",
-      "[[[1.08639216 1.14994641 1.25333583 1.30481673 1.28851558]\n",
-      "  [1.24726271 1.86527519 1.19673267 1.68732616 1.34692976]\n",
-      "  [1.30463244 1.93057679 1.12604749 1.41342702 1.14470182]]\n",
+      "[[[1.59819529 1.76148441 1.42722831 1.40834002 1.88045934]\n",
+      "  [1.10309774 1.32962232 1.95818893 1.2688292  1.04226258]\n",
+      "  [1.04561535 1.04974134 1.08696339 1.11966654 1.11459325]]\n",
       "\n",
-      " [[1.16178458 1.52602654 1.50854505 1.0807047  1.29699063]\n",
-      "  [1.39723305 1.69824029 1.35982204 1.93213748 1.75934602]\n",
-      "  [1.1043032  1.51699651 1.33682344 1.34572235 1.70329057]]]\n"
+      " [[1.77586574 1.9730865  1.99318257 1.19301275 1.28229872]\n",
+      "  [1.00920006 1.35753983 1.79842618 1.37467182 1.36246624]\n",
+      "  [1.8098754  1.19861949 1.79205346 1.250563   1.42077379]]]\n"
      ]
     }
    ],
    "source": [
-    "# your code/answer here\n",
     "print(a)\n",
     "print('--'*40)\n",
     "print(d)"
@@ -346,26 +376,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0.08639216 0.14994641 0.25333583 0.30481673 0.28851558]\n",
-      "  [0.24726271 0.86527519 0.19673267 0.68732616 0.34692976]\n",
-      "  [0.30463244 0.93057679 0.12604749 0.41342702 0.14470182]]\n",
+      "[[[0.59819529 0.76148441 0.42722831 0.40834002 0.88045934]\n",
+      "  [0.10309774 0.32962232 0.95818893 0.2688292  0.04226258]\n",
+      "  [0.04561535 0.04974134 0.08696339 0.11966654 0.11459325]]\n",
       "\n",
-      " [[0.16178458 0.52602654 0.50854505 0.0807047  0.29699063]\n",
-      "  [0.39723305 0.69824029 0.35982204 0.93213748 0.75934602]\n",
-      "  [0.1043032  0.51699651 0.33682344 0.34572235 0.70329057]]]\n"
+      " [[0.77586574 0.9730865  0.99318257 0.19301275 0.28229872]\n",
+      "  [0.00920006 0.35753983 0.79842618 0.37467182 0.36246624]\n",
+      "  [0.8098754  0.19861949 0.79205346 0.250563   0.42077379]]]\n"
      ]
     }
    ],
    "source": [
-    "# your code here\n",
-    "\n",
     "e=np.multiply(a,c)\n",
     "\n",
     "print(e)"
@@ -380,21 +408,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "[[[ True  True  True  True  True]\n",
+      "  [ True  True  True  True  True]\n",
+      "  [ True  True  True  True  True]]\n",
+      "\n",
+      " [[ True  True  True  True  True]\n",
+      "  [ True  True  True  True  True]\n",
+      "  [ True  True  True  True  True]]]\n"
      ]
     }
    ],
    "source": [
-    "# your code/answer here\n",
-    "\n",
-    "print(np.sum(e)==np.sum(a))"
+    "print(e==a)\n",
+    "#print(np.sum(e)==np.sum(a))"
    ]
   },
   {
@@ -406,21 +439,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.9321374811287426\n",
-      "1.0807047035930402\n",
-      "1.4024628409333504\n"
+      "1.993182572084803\n",
+      "1.0092000597489976\n",
+      "1.4261974524914283\n"
      ]
     }
    ],
    "source": [
-    "# your code here\n",
     "d_max=np.max(d)\n",
     "d_min=np.min(d)\n",
     "d_mean=np.mean(d)\n",
@@ -439,13 +471,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.59819529 0.76148441 0.42722831 0.40834002 0.88045934]\n",
+      "  [0.10309774 0.32962232 0.95818893 0.2688292  0.04226258]\n",
+      "  [0.04561535 0.04974134 0.08696339 0.11966654 0.11459325]]\n",
+      "\n",
+      " [[0.77586574 0.9730865  0.99318257 0.19301275 0.28229872]\n",
+      "  [0.00920006 0.35753983 0.79842618 0.37467182 0.36246624]\n",
+      "  [0.8098754  0.19861949 0.79205346 0.250563   0.42077379]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here\n",
     "\n",
-    "np.empty()"
+    "f=np.empty((2,3,5),dtype=float,order='C')\n",
+    "\n",
+    "print(f)"
    ]
   },
   {
@@ -461,12 +508,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n",
-    "sfasdfsdfasdf"
+    "# For each value in d, if it's larger than d_min but smaller than d_mean, assign 25 to the corresponding value in f. \n",
+    "\n",
+    "f[(d > d_min)&(d< d_mean)]=25\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# If a value in d is larger than d_mean but smaller than d_max, assign 75 to the corresponding value in f.\n",
+    "\n",
+    "f[(d < d_max)&(d> d_mean)]=75\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# If a value equals to d_mean, assign 50 to the corresponding value in f. \n",
+    "\n",
+    "f[d==d_mean]=50\n",
+    "\n",
+    "\n",
+    "\n",
+    " \n",
+    "# Assign 0 to the corresponding value(s) in f for d_min in d. \n",
+    "    \n",
+    "f[d==d_min]=0\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Assign 100 to the corresponding value(s) in f for d_max in d\n",
+    "f[d==d_max]=100\n"
    ]
   },
   {
@@ -496,11 +573,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1.59819529 1.76148441 1.42722831 1.40834002 1.88045934]\n",
+      "  [1.10309774 1.32962232 1.95818893 1.2688292  1.04226258]\n",
+      "  [1.04561535 1.04974134 1.08696339 1.11966654 1.11459325]]\n",
+      "\n",
+      " [[1.77586574 1.9730865  1.99318257 1.19301275 1.28229872]\n",
+      "  [1.00920006 1.35753983 1.79842618 1.37467182 1.36246624]\n",
+      "  [1.8098754  1.19861949 1.79205346 1.250563   1.42077379]]]\n",
+      "\n",
+      "\n",
+      "[[['75' '75' '75' '25' '75']\n",
+      "  ['25' '25' '75' '25' '25']\n",
+      "  ['25' '25' '25' '25' '25']]\n",
+      "\n",
+      " [['75' '75' '100' '25' '25']\n",
+      "  ['0' '25' '75' '25' '25']\n",
+      "  ['75' '25' '75' '25' '25']]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "print(d)\n",
+    "\n",
+    "print('\\n')\n",
+    "\n",
+    "print(f)"
    ]
   },
   {
@@ -522,11 +626,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "f=d.astype(np.str)\n"
    ]
   }
  ],
