--- a/module-1/Lambda-Functions/your-code/main.ipynb
+++ b/module-1/Lambda-Functions/your-code/main.ipynb
@@ -21,18 +21,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "def modify_list(lst, lmbda):\n",
+    "    temporature=[lmbda(t) for t in lst]\n",
+    "    return temporature\n",
+    "\n",
+    "c_to_k= lambda c: c+273.15\n",
+    "\n",
+    "temps = [12, 23, 38, -55, 24]\n",
+    "\n",
+    "print(modify_list(temps,c_to_k))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "    \"\"\"\n",
     "    Input: list and lambda expression\n",
     "    Output: the transformed list\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    # your code here\n",
-    "    "
+    "    \"\"\""
    ]
   },
   {
@@ -46,11 +55,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "c_to_k= lambda c: c+273.15"
    ]
   },
   {
@@ -62,13 +71,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[285.15, 296.15, 311.15, 218.14999999999998, 297.15]\n"
+     ]
+    }
+   ],
    "source": [
     "temps = [12, 23, 38, -55, 24]\n",
     "\n",
-    "# your code here"
+    "print(modify_list(temps,c_to_k))\n"
    ]
   },
   {
@@ -82,11 +99,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "mod=lambda x,y: x/y if (y !=0) else 0\n"
    ]
   },
   {
@@ -100,18 +117,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def divisor(b):\n",
+    "# it is probably wrong\n",
+    "\n",
+    "def divisor(y):\n",
     "    \"\"\"\n",
     "    Input: a number\n",
     "    Output: a function that returns 1 if the number is \n",
     "    divisible by another number (to be passed later) and zero otherwise.\n",
     "    \"\"\"\n",
     "    \n",
-    "    # your code here"
+    "    def mod(y):\n",
+    "        \n",
+    "        mod=lambda x,y: x/y if (y !=0) else 0\n",
+    "        if mod!=0:\n",
+    "            return 1\n",
+    "        else:\n",
+    "            return 0\n",
+    "    \n",
+    "    return mod(y)\n",
+    "    \n"
    ]
   },
   {
@@ -123,11 +151,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 219,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 219,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "divisor(5)"
    ]
   },
   {
@@ -139,18 +178,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 220,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-220-f415c02b249c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdivisible5\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not callable"
+     ]
+    }
+   ],
    "source": [
     "divisible5(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 221,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-221-469dc508f972>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdivisible5\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not callable"
+     ]
+    }
+   ],
    "source": [
     "divisible5(8)"
    ]
@@ -168,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +240,7 @@
        "[(1,), (2,), (3,), (4,), (5,)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,14 +262,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 145,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Green',), ('cheese',), ('English',), ('tomato',)]"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list1 = ['Green', 'cheese', 'English', 'tomato']\n",
     "list2 = ['eggs', 'cheese', 'cucumber', 'tomato']\n",
     "\n",
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "a=[x for x in zip(list1)]\n",
+    "b=[x for x in zip(list2)]\n"
    ]
   },
   {
@@ -269,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
