--- a/module-1/Advanced-Regex/your-code/main.ipynb
+++ b/module-1/Advanced-Regex/your-code/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,10 +36,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['vowels']"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern='vowels'\n",
+    "re.findall(pattern,text)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -50,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,10 +73,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['puppy', 'puppies', 'puppy']"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern='puppy|puppies'\n",
+    "re.findall(pattern,text)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,10 +110,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ran', 'run']"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern='r[au]n'\n",
+    "re.findall(pattern,text)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,10 +138,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ran', 'relay', 'race', 'run']"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern=r'\\br\\w+'\n",
+    "re.findall(pattern,text)\n",
+    "\n",
+    "###############"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,10 +177,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This is a sentence with special characters in it.'"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.sub('!','i',text)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,10 +213,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['This', 'sentence', 'words', 'varying', 'lengths']"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern='[\\w\\']{4,}'\n",
+    "re.findall(pattern,text)   \n",
+    "\n",
+    "################"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -156,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,10 +252,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['b',\n",
+       " 't',\n",
+       " 't',\n",
+       " 'b',\n",
+       " 't',\n",
+       " 't',\n",
+       " 'b',\n",
+       " 't',\n",
+       " 't',\n",
+       " 't',\n",
+       " 'b',\n",
+       " 't',\n",
+       " 't',\n",
+       " 'b',\n",
+       " 't',\n",
+       " 'b',\n",
+       " 't',\n",
+       " 't',\n",
+       " 't',\n",
+       " 'b',\n",
+       " 't']"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern='b|t'\n",
+    "re.findall(pattern,text)  \n",
+    "\n",
+    "##################"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -179,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,10 +311,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['peaks', 'people', 'realize', 'breathtaking', 'Nearly']"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "pattern='\\w*ea\\w*|\\w*eo\\w*'\n",
+    "\n",
+    "re.findall(pattern,text)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -202,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,10 +350,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Teddy', 'Roosevelt', 'Abraham', 'Lincoln']"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern='[A-Z]\\w+'\n",
+    "\n",
+    "result=re.findall(pattern,text)\n",
+    "result\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -225,10 +380,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 141,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Teddy Roosevelt', 'Abraham Lincoln']"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern='[A-Z]\\w+\\s+[A-z]\\w+'\n",
+    "re.findall(pattern,text)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -241,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,10 +419,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['I will bet you $50 I can get the bartender to give me a free drink.',\n",
+       " 'I am in!']"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern='\"(.*?)\"'\n",
+    "re.findall(pattern,text)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -264,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,10 +457,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 156,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['30', '30', '14', '16', '10']"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern='\\d+'\n",
+    "re.findall(pattern,text)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -287,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,10 +497,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 168,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['876-93-2289', '098-32-5295']"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern='\\d+-\\d+-\\d+'\n",
+    "re.findall(pattern,text)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -313,16 +525,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 175,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[' (847)789-0984', ' (987)222-0901']"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern='\\s\\W\\d+\\W\\d+-\\d+'\n",
+    "re.findall(pattern,text)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 15. Use a regular expression to find and extract all the formatted numbers (both social security and phone) from the text below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[' 876-93-2289', '(847)789-0984', ' 098-32-5295', '(987)222-0901']"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern='\\W\\d+\\W\\d+-\\d+'\n",
+    "re.findall(pattern,text)"
    ]
   },
   {
@@ -349,7 +597,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
